--- a/index.html
+++ b/index.html
@@ -5,38 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple CSS + JS Clock</title>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700|Hind&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>CSS & JS CLOCK</h1>
-    <div class="vertical-line"></div>
-    <div class="vertical-line"></div>
-    <div class="vertical-line"></div>
+    <header>
+        <h1>CSS & JS CLOCK</h1>
+        <h2>Current date <span id="displayed-date"></span></h2>
+    </header>
+    <div class="vertical-line" id="first-line"></div>
+    <div class="vertical-line" id="second-line"></div>
+    <div class="vertical-line" id="third-line"></div>
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand"></div>
             <div class="hand minute-hand"></div>
             <div class="hand second-hand"></div>
             <div class="center"></div>
-            <div class="digital-clock"></div>
-            <div class="time"></div>
-                <ul>
-                    <li><span>1</span></li>
-                    <li><span>2</span></li>
-                    <li><span>3</span></li>
-                    <li><span>4</span></li>
-                    <li><span>5</span></li>
-                    <li><span>6</span></li>
-                    <li><span>7</span></li>
-                    <li><span>8</span></li>
-                    <li><span>9</span></li>
-                    <li><span>10</span></li>
-                    <li><span>11</span></li>
-                    <li><span>12</span></li>
-                </ul>
         </div>
     </div>
+    <div class="digital-clock"></div>
     <script src="clock.js"></script>
 </body>
 </html>
