Hands of the clock added

--- a/index.html
+++ b/index.html
@@ -5,26 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simple CSS + JS Clock</title>
-    <link href="https://fonts.googleapis.com/css?family=Hind|Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind|Josefin+Sans|Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>CSS & JS CLOCK</h1>
-            <h2>Current date:<span id="displayed-date"></span></h2>
-        </header>
-        <div class="vertical-line" id="first-line"></div>
-        <div class="vertical-line" id="second-line"></div>
-        <div class="vertical-line" id="third-line"></div>
-        <div class="clock">
-            <div class="clock-face">
-                <div class="hand hour-hand"></div>
-                <div class="hand minutes-hand"></div>
-                <div class="hand seconds-hand"></div>
-                <div class="center"></div>
-                <div class="digital-clock"></div>
-            </div>
+    <header>
+        <h1>CSS & JS CLOCK</h1>
+        <h2>Current date:<span id="displayed-date"></span></h2>
+    </header>
+    <div class="vertical-line" id="first-line"></div>
+    <div class="vertical-line" id="second-line"></div>
+    <div class="vertical-line" id="third-line"></div>
+    <div class="clock">
+        <div class="clock-face">
+            <div class="hand hour-hand"></div>
+            <div class="hand minutes-hand"></div>
+            <div class="hand seconds-hand"></div>
+            <div class="center"></div>
+            <div class="digital-clock"></div>
         </div>
     </div>
     <script src="clock.js"></script>
